--- a/Pandas/Introduction-to-pandas.ipynb
+++ b/Pandas/Introduction-to-pandas.ipynb
@@ -2160,6 +2160,7 @@
    "outputs": [],
    "source": [
     "# Pour mettre les lettres majuscule en minuscule\n",
+    "# En mettant df[\"Make\"] comme variable on applique le changement dans la table df\n",
     "df[\"Make\"]=df[\"Make\"].str.lower()"
    ]
   },
